--- a/css/my-style.css
+++ b/css/my-style.css
@@ -5,13 +5,13 @@
   line-height: 100%;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  outline: 1px solid lime;
+  /* outline: 1px solid lime; */
 }
 :root {
-  --fondo: #fff;
-  --texto: #000;
-  /* --fondo: #000;
-  --texto: #fff; */
+  /* --fondo: #fff;
+  --texto: #000; */
+  --fondo: #000;
+  --texto: #fff;
 }
 nav {
   width: 100%;
@@ -69,9 +69,54 @@ nav div div i {
 /* main ----------------------------- */
 main {
   top: 82px;
-  margin: 20px;
+  /* margin: 20px; */
+  padding: 20px;
   position: absolute;
+  /* background-color: red; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
+main h1 {
+  font-size: 2em;
+  padding-bottom: 20px;
+  line-height: 150%;
+}
+main p {
+  line-height: 200%;
+  padding-bottom: 20px;
+}
+main button {
+  padding: 10px;
+  background-color: var(--fondo);
+  color: var(--texto);
+  border: 2px solid transparent;
+  border-radius: 3px;
+  transition: all 0.2s ease;
+  opacity: 0.8;
+  cursor: pointer;
+}
+main button:hover {
+  opacity: 1;
+}
+/* main ----------------------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (min-width: 715px) {
   nav header{
     height: 82px;
@@ -88,6 +133,14 @@ main {
     top: 0;
     left: 20%;
     justify-content: flex-end;
+  }
+  main div {
+    width: 60%;
+    /* height: 100%; */
+    /* background-color: red; */
+  }
+  main h1 {
+    font-size: 4em;
   }
 }
 
